# mcp_memory_bank

./: .clinerules  .gitignore  LICENSE  README.md  RULES.md  pyproject.toml
.memory_bank/: index.db
src/mcp_memory_bank/: __init__.py  __main__.py  models.py  server.py  storage.py
tests/: conftest.py  test_models.py  test_server.py  test_storage.py  test_storage_modes.py
